syntax = "proto3";
package UserManagement;

enum LoginFailureReason
{
    SessionId = 0;
    
    DisplayName = 2;
    
    InternalServerError = 1;

    Banned = 3;
};